--- a/index.css
+++ b/index.css
@@ -51,10 +51,12 @@ header{
 .video{
     max-width: 100%;
     max-height: 100%;
+    transform: rotateY(180deg);
 }
 .canvas{
     width: 0px;
     height: 0px;
+    transform: rotateY(180deg);
 }
 .card .card-btn{
     background-color: #038686;
