--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 body{
-    background-color: #F2F2F2;
+    /* background-color: #F2F2F2; */
+    /* background-image: url(./img/library.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 header{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
