--- a/index.css
+++ b/index.css
@@ -57,8 +57,8 @@ header{
     transform: rotateY(180deg);
 }
 .canvas{
-    width: 0px;
-    height: 0px;
+    max-width: 100%;
+    max-height: 100%;
     transform: rotateY(180deg);
 }
 .card .card-btn{
