--- a/index.css
+++ b/index.css
@@ -55,6 +55,7 @@ header{
     max-width: 100%;
     max-height: 100%;
     transform: rotateY(180deg);
+    /* object-fit: cover; */
 }
 .canvas{
     max-width: 100%;
